# Stock-analysis

./: .gitignore  FairValue_Analysis.py  PlotManager.py  RelativeChartComparison.py  StockData.py  TODO.md  analysis.py  pyproject.toml  readme.md  requirements.txt  run_analysis.py  try_finqual.py
.github/workflows/: python-tests.yml
dev/: RelativeChartComparison.py
src/stock_analysis/: PlotManager.py  StockData.py  __init__.py  analysis.py
tests/: test_stock_analysis.py
