[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
dependencies = [
    "yahooquery",
    "pandas",
    "matplotlib",
    "numpy",
    "scipy",
    "finqual",
]
name = "stock_analysis"
version = "1.0"
description = "Stock analysis tool creating analysis plots"

[tool.pytest.ini_options]
addopts = "--cov=stock_analysis --cov-report html"

testpaths = ["tests"]
